--- a/Coches.css
+++ b/Coches.css
@@ -1,47 +1,96 @@
+h1 {
 
-h1{
-    font-family: "Rubik Wet Paint";   
-    background-color: blue;
+    font-family: "Carter One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(199, 198, 198);
     text-align: center;
     height: 100px;
     padding-top: 35px;
     text-decoration: underline;
+    
+    
 }
-figure{
+
+figure {
     text-align: center;
     width: 25%;
-    margin: 1px;   
+    margin: 1px;
     display: inline-block;
     margin-right: 50px;
     margin-left: 4%;
 }
-img{
-    width: 400px;
-    border:1px solid black;
-    height:300px;
-  
-   
-}
-nav{
 
-    background-color: blue; 
-}   
-li{
-    background-color: rgb(0, 0, 0);
+img {
+    width: 400px;
+    border: 1px solid black;
+    height: 300px;
+
+
+}
+
+nav {
+
+    background-image: url(../Coches/imagen/fondoWeb.jpg);
+    border: 0px solid black;
+}
+
+li {
+   
+    background-image: url(../Coches/imagen/rueda2.png); 
+    
     width: 360px;
-    border: 1px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     padding-top: 10px;
     padding-bottom: 10px;
-    color: white;
+    color:rgb(255, 255, 255);
     display: inline;
     margin-left: 70px;
-    padding-left: 70px; 
+    padding-left: 70px;
     padding-right: 70px;
+    font-weight: bold;
+    background-color: black;
 
-    
+
+
 }
-p{
+
+p {
     text-align: center;
     width: 80%;
     margin-left: 10%;
+}
+
+nav:last-child {
+    background-color: grey;
+    text-align: center;
+
+}
+
+header {
+
+    border: 2px solid black;
+
+     
+    background-image: url(../Coches/imagen/fondoRueda.png);  
+}
+
+ol {
+    border: 1px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    background-color: black;
+}
+
+nav:first {
+    border: 2px solid black;
+    background-color: blueviolet;
+
+}
+body{
+    background-color: rgb(179, 179, 179);
+}
+h2{
+    background-color: black;
+    color: white;
+    text-align: center;
 }
