--- a/Coches.css
+++ b/Coches.css
@@ -25,20 +25,15 @@ img {
     width: 400px;
     border: 1px solid black;
     height: 300px;
-
-
 }
 
 nav {
-
-    background-image: url(imagen/fondoWeb.jpg);
+    
     border: 0px solid black;
 }
 
-li {
-   
+li.tres {
     background-image: url(imagen/rueda2.png); 
-    
     width: 360px;
     border: 2px solid rgb(0, 0, 0);
     padding-top: 10px;
@@ -49,11 +44,12 @@ li {
     padding-left: 70px;
     padding-right: 70px;
     font-weight: bold;
-    background-color: black;
+    background-color: rgb(255, 3, 3);
 
 
 
 }
+
 
 p {
     text-align: center;
@@ -64,14 +60,10 @@ p {
 nav:last-child {
     background-color: grey;
     text-align: center;
-
 }
 
 header {
-
-    border: 2px solid black;
-
-     
+    border: 2px solid black;    
     background-image: url(imagen/fondoRueda.png);  
 }
 
@@ -83,8 +75,6 @@ ol {
 
 nav:first {
     border: 2px solid black;
-    background-color: blueviolet;
-
 }
 body{
     background-color: rgb(179, 179, 179);
@@ -93,4 +83,28 @@ h2{
     background-color: black;
     color: white;
     text-align: center;
+}
+li:hover{
+    
+    color: rgb(250, 116, 116);
+}
+div{
+    border: 3px solid rgb(0, 0, 0);
+}
+ol.dos{
+    background-image: url(imagen/fondoRueda.png);
+    height:400px;
+    margin-top: 50px;
+    width: 100%;
+
+}
+li.uno{
+   background-color: black;
+   color: white;
+   display: inline-block;
+   margin-top: 100px;
+   border: 1px solid rgb(255, 255, 255);
+   width: 500px;
+   margin-right: 80px;
+    
 }
