--- a/Coches.css
+++ b/Coches.css
@@ -106,8 +106,9 @@ li.uno{
    display: inline-block;
    margin-top: 100px;
    border: 1px solid rgb(255, 255, 255);
-   width: 500px;
+   width: 30%;
    margin-right: 80px;
+   margin-left: -30px;
     
 }
 footer p{
@@ -131,4 +132,7 @@ footer p{
     display: inline-block;
     margin-left: 1.35%;
    
+}
+#uno{
+    color: white;
 }
