--- a/Coches.css
+++ b/Coches.css
@@ -106,7 +106,7 @@ li.uno{
    display: inline-block;
    margin-top: 100px;
    border: 1px solid rgb(255, 255, 255);
-   width: 30%;
+   width: 25%;
    margin-right: 80px;
    margin-left: -30px;
     
@@ -131,7 +131,7 @@ footer p{
     vertical-align: top;
     display: inline-block;
     margin-left: 1.35%;
-   
+    border: 1.5px solid black;
 }
 #uno{
     color: white;
