--- a/Coches.css
+++ b/Coches.css
@@ -106,9 +106,10 @@ li.uno{
    display: inline-block;
    margin-top: 100px;
    border: 1px solid rgb(255, 255, 255);
-   width: 25%;
+   width: 30%;
    margin-right: 80px;
    margin-left: -30px;
+   display: inline-block;
     
 }
 footer p{
