--- a/Coches.css
+++ b/Coches.css
@@ -109,9 +109,21 @@ li.uno{
    width: 30%;
    margin-right: 80px;
    margin-left: -30px;
-   display: inline-block;
+  
     
 }
+li.un{
+    background-color: black;
+    color: white;
+    display: inline-block;
+    margin-top: 100px;
+    border: 1px solid rgb(255, 255, 255);
+    width: 30%;
+    margin-right: 80px;
+    margin-left: -30px;
+   
+     
+ }
 footer p{
     border: 2px solid black;
     padding: 30px;
@@ -135,5 +147,86 @@ footer p{
     border: 1.5px solid black;
 }
 #uno{
-    color: white;
+    display: inline-block;
+}
+#un{
+    display: inline-block;
+}
+
+
+@media (max-width: 768px) {
+
+    h1 {
+        font-size: 24px;
+        padding-top: 20px;
+        height: auto;
+    }
+
+    p {
+        width: 90%;
+        margin-left: 5%;
+        font-size: 14px;
+    }
+
+    figure {
+        width: 40%;
+        margin: 0 auto;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+    }
+
+    nav ol li {
+        display: block;
+        margin: 10px auto;
+        width: 80%;
+        padding-left: 0;
+    }
+
+    #unoo, #doss {
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+
+@media (max-width: 480px) {
+
+    h1 {
+        font-size: 20px;
+        padding-top: 15px;
+    }
+
+    nav ol li {
+        width: 100%;
+        margin: 5px auto;
+        font-size: 14px;
+    }
+
+    figure {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+    }
+
+    p {
+        font-size: 12px;
+        text-align: justify;
+    }
+
+    #unoo, #doss {
+        width: 100%;
+        display: block;
+    }
+
+    footer p {
+        padding: 15px;
+        font-size: 12px;
+    }
 }
