--- a/Coches.css
+++ b/Coches.css
@@ -3,6 +3,9 @@ body {
     font-family: Arial, sans-serif;
     color: #000;
 }
+a{
+    text-decoration: none;
+}
 
 h1 {
     font-family: "Carter One", system-ui;
