--- a/Coches.css
+++ b/Coches.css
@@ -81,7 +81,7 @@ li.tres {
 }
 
 li.uno, li.un {
-    background-color: #000;
+    background-color: white;
     color: #fff;
     display: inline-block;
     margin: 100px 80px 0 -30px;
@@ -89,10 +89,10 @@ li.uno, li.un {
     width: 30%;
     padding: 1em;
     text-align: center;
+    
 }
 
 li:hover, a:hover {
-    color: #fa7474;
 }
 
 a:focus, button:focus, li:focus {
