--- a/Coches.css
+++ b/Coches.css
@@ -81,7 +81,7 @@ li.tres {
 }
 
 li.uno, li.un {
-    background-color: white;
+    background-color: black;
     color: #fff;
     display: inline-block;
     margin: 100px 80px 0 -30px;
