--- a/Coches.css
+++ b/Coches.css
@@ -73,7 +73,7 @@ li.tres {
     width: 360px;
     border: 2px solid #000;
     padding: 10px 70px;
-    color: #fff;
+    color: black;
     display: inline-block;
     margin-left: 70px;
     font-weight: bold;
