--- a/Coches.css
+++ b/Coches.css
@@ -1,183 +1,134 @@
-body {
-    background-color: #b3b3b3;
-    font-family: Arial, sans-serif;
-    color: #000;
-}
-a{
-    text-decoration: none;
-    color:white;
-}
+    header {
+      background-color: #000000;
+      color: white;
+      padding: 20px;
+  }
 
-h1 {
-    font-family: "Carter One", system-ui;
-    font-weight: 400;
-    font-style: normal;
-    color: #ffffff;
-    text-align: center;
-    height: 100px;
-    padding-top: 35px;
-    text-decoration: underline;
-    background-color: #222;
-}
+  nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
 
-h2 {
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-}
+  nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 20px;
+  }
 
-figure {
-    text-align: center;
-    width: 25%;
-    display: inline-block;
-    margin: 0 4%;
-}
+  nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+  }
 
-img {
-    width: 100%;
-    max-width: 400px;
-    border: 2px solid #000;
-    height: auto;
-}
+  nav ul li a:hover {
+      text-decoration: underline;
+  }
 
-p {
-    text-align: center;
-    width: 80%;
-    margin: 1em auto;
-    line-height: 1.6;
-    font-size: 1rem;
-    color: #111;
-}
+  h1 {
+      margin-top: 10px;
+      font-size: 2rem;
+  }
 
-nav {
-    border: none;
-}
+  * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
 
-nav:first-of-type {
-    border: 2px solid #000;
-}
+  body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      min-height: 100vh;
+      background-color: #ffffff;
+      display: flex;
+      flex-direction: column;
+  }
 
-nav:last-of-type {
-    background-color: #777;
-    text-align: center;
-}
+  .content {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #ffffff;
+      margin-top: -6%;
+      margin-bottom: -6%;
 
-ol {
-    border: 1px solid #000;
-    background-color: #000;
-    padding: 0;
-    list-style: none;
-}
+  }
 
-li.tres {
-    width: 360px;
-    border: 2px solid #000;
-    padding: 10px 70px;
-    color: black;
-    display: inline-block;
-    margin-left: 70px;
-    font-weight: bold;
-    background-color: rgb(255, 255, 255);
-}
+  footer {
+      background-color: #000000;
+      color: white;
+      padding: 40px 0 20px;
+  }
 
-li.uno, li.un {
-    background-color: black;
-    color: #fff;
-    display: inline-block;
-    margin: 100px 80px 0 -30px;
-    border: 1px solid #fff;
-    width: 30%;
-    padding: 1em;
-    text-align: center;
+  .footer-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+  }
+
+  .footer-nav {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 30px;
+      flex-wrap: wrap;
+  }
+
+  .footer-nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      transition: color 0.3s ease;
+  }
+
+  .footer-nav a:hover {
+      color: #8b0f0f;
+  }
+  span{
+    margin-left: 49%;
     
+  }
+
+  .footer-bottom {
+      text-align: center;
+      padding-top: 20px;
+      border-top: 1px solid #ffffff;
+      color: #ffffff;
+      font-size: 14px;
+  }
+
+  .intro {
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-top: 2%;
+      margin-bottom: 2%;
+  }
+
+  .negro{
+    color: black;
+    margin: 10%;
+    margin-left: 2%;
+    font-size: 130%;
+
+  }
+  figure{
+    margin-right: 3%;
+  }
+  h2{
+    border-bottom: 3px solid black;
+  }
+
+  .boton{
+    margin-left: 49%;
+  }
+  h2{
+    font-size: 300%;
+    margin-left: 0;
+  }
+body{
+    background-color:rgb(220, 220, 220);
 }
-
-li:hover, a:hover {
-}
-
-a:focus, button:focus, li:focus {
-    outline: 3px dashed #ff0;
-    outline-offset: 3px;
-    background-color: #333;
-}
-
-footer p {
-    border: 2px solid #000;
-    padding: 30px;
-    margin: 20px 0 0 0;
-    text-align: center;
-    background-color: #f4f4f4;
-    font-size: 1rem;
-    color: #111;
-}
-
-#unoo, #doss {
-    width: 49%;
-    display: inline-block;
-    border: 1.5px solid #000;
-    vertical-align: top;
-    padding: 1em;
-    box-sizing: border-box;
-}
-
-@media (max-width: 768px) {
-    h1 {
-        font-size: 1.5rem;
-        padding-top: 20px;
-        height: auto;
-    }
-
-    p {
-        width: 90%;
-        margin: 0 auto;
-        font-size: 0.9rem;
-    }
-
-    figure {
-        width: 40%;
-        margin: 1em auto;
-    }
-
-    nav ol li {
-        display: block;
-        width: 80%;
-        margin: 10px auto;
-        padding-left: 0;
-    }
-
-    #unoo, #doss {
-        width: 100%;
-        margin-left: 0;
-    }
-}
-
-@media (max-width: 480px) {
-    h1 {
-        font-size: 1.2rem;
-        padding-top: 15px;
-    }
-
-    nav ol li {
-        width: 100%;
-        font-size: 0.9rem;
-    }
-
-    figure {
-        width: 80%;
-    }
-
-    img {
-        width: 100%;
-        height: auto;
-    }
-
-    p {
-        font-size: 0.85rem;
-        text-align: justify;
-    }
-
-    footer p {
-        padding: 15px;
-        font-size: 0.85rem;
-    }
-} 
