--- a/Coches.css
+++ b/Coches.css
@@ -1,134 +1,139 @@
-    header {
-      background-color: #000000;
-      color: white;
-      padding: 20px;
-  }
 
-  nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  }
 
-  nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 20px;
-  }
+h1 {
 
-  nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-  }
-
-  nav ul li a:hover {
-      text-decoration: underline;
-  }
-
-  h1 {
-      margin-top: 10px;
-      font-size: 2rem;
-  }
-
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-  }
-
-  body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      min-height: 100vh;
-      background-color: #ffffff;
-      display: flex;
-      flex-direction: column;
-  }
-
-  .content {
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #ffffff;
-      margin-top: -6%;
-      margin-bottom: -6%;
-
-  }
-
-  footer {
-      background-color: #000000;
-      color: white;
-      padding: 40px 0 20px;
-  }
-
-  .footer-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-  }
-
-  .footer-nav {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-bottom: 30px;
-      flex-wrap: wrap;
-  }
-
-  .footer-nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 16px;
-      transition: color 0.3s ease;
-  }
-
-  .footer-nav a:hover {
-      color: #8b0f0f;
-  }
-  span{
-    margin-left: 49%;
+    font-family: "Carter One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(199, 198, 198);
+    text-align: center;
+    height: 100px;
+    padding-top: 35px;
+    text-decoration: underline;
     
-  }
+    
+}
 
-  .footer-bottom {
-      text-align: center;
-      padding-top: 20px;
-      border-top: 1px solid #ffffff;
-      color: #ffffff;
-      font-size: 14px;
-  }
+figure {
+    text-align: center;
+    width: 25%;
+    
+    display: inline-block;
+    margin-right: 4%;
+    margin-left: 4%;
+}
 
-  .intro {
-      margin-left: 10%;
-      margin-right: 10%;
-      margin-top: 2%;
-      margin-bottom: 2%;
-  }
+img {
+    width: 400px;
+    border: 1px solid black;
+    height: 300px;
+}
 
-  .negro{
-    color: black;
-    margin: 10%;
-    margin-left: 2%;
-    font-size: 130%;
+nav {
+    
+    border: 0px solid black;
+}
 
-  }
-  figure{
-    margin-right: 3%;
-  }
-  h2{
-    border-bottom: 3px solid black;
-  }
+li.tres {
+    background-image: url(imagen/rueda2.png); 
+    width: 360px;
+    border: 2px solid rgb(0, 0, 0);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color:rgb(255, 255, 255);
+    display: inline;
+    margin-left: 70px;
+    padding-left: 70px;
+    padding-right: 70px;
+    font-weight: bold;
+    background-color: rgb(255, 3, 3);
 
-  .boton{
-    margin-left: 49%;
-  }
-  h2{
-    font-size: 300%;
-    margin-left: 0;
-  }
+
+
+}
+
+
+p {
+    text-align: center;
+    width: 80%;
+    margin-left: 10%;
+}
+
+nav:last-child {
+    background-color: grey;
+    text-align: center;
+}
+
+header {
+    border: 2px solid black;    
+    background-image: url(imagen/fondoRueda.png);  
+}
+
+ol {
+    border: 1px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    background-color: black;
+}
+
+nav:first {
+    border: 2px solid black;
+}
 body{
-    background-color:rgb(220, 220, 220);
+    background-color: rgb(179, 179, 179);
+}
+h2{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+li:hover{
+    
+    color: rgb(250, 116, 116);
+}
+div{
+   
+}
+ol.dos{
+    background-image: url(imagen/fondoRueda.png);
+    height:400px;
+    margin-top: 50px;
+    width: 100%;
+
+}
+li.uno{
+   background-color: black;
+   color: white;
+   display: inline-block;
+   margin-top: 100px;
+   border: 1px solid rgb(255, 255, 255);
+   width: 30%;
+   margin-right: 80px;
+   margin-left: -30px;
+   display: inline-block;
+    
+}
+footer p{
+    border: 2px solid black;
+    padding: 30px;
+    padding-right: 20%;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: -20px;
+    text-align: center;
+    
+}
+#unoo{
+    width: 49%;
+    display: inline-block;
+    border: 1.5px solid black;
+}
+#doss{
+    width: 49%;
+    vertical-align: top;
+    display: inline-block;
+    margin-left: 1.35%;
+    border: 1.5px solid black;
+}
+#uno{
+    color: white;
 }
